# etch

./: Cargo.toml  EXPANSION_SUMMARY.md  PKGBUILD  README-WINGS.md  README.md  README.old  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.1.md  UPDATE-SYSTEM-FINAL.md  UPDATE-SYSTEM.md  VERSIONING.md  build.rs  catalog.json  check-urls.sh  etch-launcher.sh  fix-broken-urls.py  fix-urls-output.txt  org.etch.Etch.appdata.xml  org.etch.Etch.desktop  org.etch.Etch.policy  org.etch.Etch.yml  publish-aur.sh  release.sh  url-check-results.txt  version-bump.sh
src/: main.rs
src/core/: mod.rs  models.rs  platforms.rs  verification.rs
src/db/: backup.rs  connection.rs  migration.rs  mod.rs  models.rs  schema.rs
src/download/: catalog.rs  fetcher.rs  mod.rs  verification.rs
src/io/: devices.rs  mod.rs  writer.rs
src/ui/: download_progress.rs  iso_browser.rs  minimal.css  mod.rs  style.css  style.css.bak  window.rs
