[package]
name = "etch"
version = "0.1.0"
edition = "2021"
authors = ["Aaron"]
description = "A transparent, trustworthy ISO-to-USB writer for Linux"
license = "MIT OR Apache-2.0"

[dependencies]
gtk4 = "0.9"
glib = "0.20"
anyhow = "1.0"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.5"

[dev-dependencies]
tempfile = "3.0"
